artifact-deploy-script/k8s-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-service1
  template:
    metadata:
      labels:
        app: api-service1
    spec:
      containers:
      - name: api-service1
        image: devopsheshan/api-service1:latest
        ports:
        - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: api-service1-service
spec:
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  selector:
    app: api-service1

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-service2
  template:
    metadata:
      labels:
        app: api-service2
    spec:
      containers:
      - name: api-service2
        image: devopsheshan/api-service2:latest
        ports:
        - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: api-service2-service
spec:
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  selector:
    app: api-service2
